2022-02-02  Youenn Fablet  <youenn@apple.com>

        Clarify that some UUID routines are dedicated to UUID v4
        https://bugs.webkit.org/show_bug.cgi?id=235430

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/UUID.cpp:
        (parseAndStringifyUUID):
        (TEST):
        * TestWebKitAPI/Tests/WebKitCocoa/NetworkProcess.mm:
        (waitUntilNetworkProcessIsResponsive):
        * TestWebKitAPI/Tests/WebKitGLib/TestAutomationSession.cpp:
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::saltForOrigin):

2022-02-01  Robert Jenner  <Jenner@apple.com>

        Update watchOS simulators to run on the newer 44mm display
        https://bugs.webkit.org/show_bug.cgi?id=235986

        Reviewed by Ryan Haddad.

        * Scripts/webkitpy/port/watch_simulator.py:
        (WatchSimulatorPort):

2022-02-01  Wenson Hsieh  <wenson_hsieh@apple.com>

        Mitigate hangs underneath -requestAutocorrectionContextWithCompletionHandler: when focusing text fields
        https://bugs.webkit.org/show_bug.cgi?id=235963
        rdar://70152487

        Reviewed by Tim Horton.

        Add a new API test to exercise a scenario that currently isn't covered by existing tests: if the text input
        client (i.e. UIKit) calls `-requestAutocorrectionContextWithCompletionHandler:`, then invokes an asynchronous
        API that performs an editing action or changes the selection, and then requests another autocorrection context,
        the second autocorrection context should reflect the changes that occurred as a result of the async editing
        action.

        * TestWebKitAPI/Tests/ios/AutocorrectionTestsIOS.mm:

2022-02-01  Jonathan Bedard  <jbedard@apple.com>

        [EWS] Fix infinate retry on PR with red ToT 
        https://bugs.webkit.org/show_bug.cgi?id=235971
        <rdar://problem/88344438>

        Reviewed by Aakash Jain.

        * CISupport/ews-build/steps.py: