@@ -1,3 +1,14 @@
+2022-02-02  Jonathan Bedard  <jbedard@apple.com>
+
+        [EWS] unit tests have become slower
+        https://bugs.webkit.org/show_bug.cgi?id=235364
+        <rdar://problem/88073408>
+
+        Reviewed by Aakash Jain.
+
+        * CISupport/ews-build/steps_unittest.py: Mock
+        time.sleep when testing PushCommitToWebKitRepo.
+
 2022-02-02  Youenn Fablet  <youenn@apple.com>
 
         Clarify that some UUID routines are dedicated to UUID v4
